--- a/index.css
+++ b/index.css
@@ -37,3 +37,18 @@ header{
   top:20%;
   background-color: #873839;
 }
+.imagenes{
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 20px;
+    margin: auto;
+    max-width: 1200px;
+  object-fit: fill;
+  top:20%;
+  gap: 100px;
+  grid: 50px;
+  height: auto;
+  left:45%;
+}
