--- a/index.css
+++ b/index.css
@@ -5,15 +5,21 @@
   font-family: 'Playfair Display', serif;
 }
 body{
-  color: red;
+  background-image: url("imagenes/fondo.png")!important;
+  background-repeat: no-repeat;
+  background-size: 100%;
+    -webkit-backdrop-filter: blur(2000px);
+  backdrop-filter: blur(7000px);
+  background: rgba(255,255,255,0.2);
 }
 img{
   image-rendering: crisp-edges;
 }
 header{
-  display: flex;
+  
   flex-direction: column;
   gap:10px;
+  z-index: 2;
 }
 .logo{
   width: 200px;
@@ -27,15 +33,31 @@ header{
   transform: translate(-50%, -50%);
   top:10%;
   left:50%;
+  filter: none;
+  z-index: 2;
+  
 }
+.container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-image: url("imagenes/fondo.png")!important;
+  background-repeat: no-repeat;
+  background-size: 100%;
+    -webkit-backdrop-filter: blur(2000px);
+  backdrop-filter: blur(7000px);
+  background: rgba(255,255,255,0.2);
+}
+
 .hero{
-  position: fixed;
-  align-items: center;
-  left:6%;
-  width: 90%;
+  position: absolute;
+  display: flex;
+  left: 10%;
+  width: 82%;
   height: 5px;
-  top:20%;
+  top: 20%;
   background-color: #873839;
+  
 }
 .imagenes{
   position: fixed;
@@ -46,9 +68,24 @@ header{
     margin: auto;
     max-width: 1200px;
   object-fit: fill;
-  top:20%;
-  gap: 100px;
+  top:25%;
+  gap: 500px;
   grid: 50px;
   height: auto;
   left:45%;
+  z-index: 1;
+}
+.imagen3{
+  right: 60%;
+  top:50%;
+  position: fixed;
+}
+.imagen2:hover{
+  transform: rotate(20deg) scale(1.5);
+}
+.imagen3:hover{
+  transform: rotate(20deg) scale(1.5);
+}
+.imagen4:hover{
+  transform: rotate(20deg) scale(1.5);
 }
