--- a/index.css
+++ b/index.css
@@ -8,18 +8,21 @@ body{
   background-image: url("imagenes/fondo.png")!important;
   background-repeat: no-repeat;
   background-size: 100%;
-    -webkit-backdrop-filter: blur(2000px);
-  backdrop-filter: blur(7000px);
+  -webkit-backdrop-filter: blur(2000px);
+  backdrop-filter: blur(200px);
   background: rgba(255,255,255,0.2);
 }
 img{
   image-rendering: crisp-edges;
 }
 header{
-  
+  display: flex;
   flex-direction: column;
   gap:10px;
-  z-index: 2;
+}
+section{
+  display: flex;
+  flex-direction: column;
 }
 .logo{
   width: 200px;
@@ -33,20 +36,12 @@ header{
   transform: translate(-50%, -50%);
   top:10%;
   left:50%;
-  filter: none;
-  z-index: 2;
-  
 }
+
 .container {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url("imagenes/fondo.png")!important;
-  background-repeat: no-repeat;
-  background-size: 100%;
-    -webkit-backdrop-filter: blur(2000px);
-  backdrop-filter: blur(7000px);
-  background: rgba(255,255,255,0.2);
 }
 
 .hero{
@@ -59,33 +54,149 @@ header{
   background-color: #873839;
   
 }
-.imagenes{
+.infoCard1,
+.infoCard2,
+.infoCard3{
+  display: none;
+}
+
+.imagen4 {
+  cursor: pointer;
   position: fixed;
+  top: 55%;
+  left: 8%;
+  transition: transform 0.3s ease-in-out;
+  z-index: 10;
+}
+
+.imagen3 {
+  right: 50% !important;
+  top: 80%;
+  position: absolute;
+  cursor: pointer;
   display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding: 20px;
-    margin: auto;
-    max-width: 1200px;
-  object-fit: fill;
-  top:25%;
-  gap: 500px;
-  grid: 50px;
-  height: auto;
-  left:45%;
-  z-index: 1;
+  transition: transform 0.3s ease-in-out;
+  z-index: 10;
 }
-.imagen3{
-  right: 60%;
-  top:50%;
+.imagen3::aftee{
+  background-color: rgba(255, 255, 0, 0); 
+  
+}
+
+.imagen2 {
+  cursor: pointer;j
   position: fixed;
+  top: 30%;
+  left: 40%;
+  transition: transform 0.3s ease-in-out;
+  z-index: 10;
 }
-.imagen2:hover{
+
+/* Efecto hover */
+.imagen2:hover {
   transform: rotate(20deg) scale(1.5);
+  transition: transform 0.3s ease-in-out;
+  
 }
-.imagen3:hover{
+
+.imagen3:hover {
   transform: rotate(20deg) scale(1.5);
+  transition: transform 0.3s ease-in-out;
 }
-.imagen4:hover{
+
+.imagen4:hover {
   transform: rotate(20deg) scale(1.5);
+  transition: transform 0.3s ease-in-out;
+}
+
+
+.infoCard1{
+  position: fixed;
+  bottom: 45%;
+  left: 40%;
+  width: 300px;
+  padding: 20px;
+  background-color: rgba(128, 128, 128, 0.2); /* Grisáceo */
+  border: 2px solid rgba(128, 128, 128, 0.5);
+  border-radius: 15px;
+  display: none; 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  z-index: 11;
+}
+.infoBaja1{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  color: #333;
+  margin: 0 0 10px;
+}
+.Precio1{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700; /* Más grueso */
+  color: yellow;
+  text-align: center;
+  margin: 0 0 10px;
+}
+
+/*imagen final */
+.infoCard2{ 
+  position: absolute;
+  right: 55%;
+  top: 85%;
+  width: 380px;
+  padding: 20px;
+  background-color: rgba(128, 128, 128, 0.2); /* Grisáceo */
+  border: 2px solid rgba(128, 128, 128, 0.5);
+  border-radius: 15px;
+  display: none; 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  z-index: 11;
+}
+
+.infoBaja2{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 420;
+  color: #333;
+  margin: 0 0 10px;
+  font-size: 70px !important;
+  width: 300px;
+}
+
+.Precio2{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 740;
+  color: yellow;
+  text-align: center;
+  margin: 0 0 10px;
+}
+/*imagen del medio */
+.infoCard3{
+  position: fixed;
+  right: 60%;
+  top: 66%;
+  width: 300px;
+  padding: 20px;
+  background-color: rgba(128, 128, 128, 0.2); /* Grisáceo */
+  border: 2px solid rgba(128, 128, 128, 0.5);
+  border-radius: 15px;
+  display: none; 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  z-index: 11;
+}
+
+.infoBaja3{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  color: #333;
+  margin: 0 0 10px;
+}
+
+.Precio3{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700; /* Más grueso */
+  color: yellow;
+  text-align: center;
+  margin: 0 0 10px;
 }
